// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test for User Details Component  > should match snapshot 1`] = `
<span
  className="show-sidebar-button
    visible
    reduce
     "
  data-testid="sidebar-button"
  onClick={[Function]}
>
  <svg
    data-testid="chevron-right-icon"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      {
        "color": undefined,
      }
    }
    viewBox="0 0 16 16"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"
      fillRule="evenodd"
    />
  </svg>
</span>
`;

exports[`test for User Details Component  should match snapshot 1`] = `
<span
  className="show-sidebar-button
    visible
    reduce
     "
  data-testid="sidebar-button"
  onClick={[Function]}
>
  <svg
    data-testid="chevron-right-icon"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 16 16"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"
      fillRule="evenodd"
    />
  </svg>
</span>
`;
